# Peroperochat

./: .gitattributes  .gitignore  LICENSE  README.md  capacitor.config.ts  deploy.ps1  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: android-build.yml  init-android.yml  tauri-build.yml
android/app/: build.gradle
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
public/: manifest.webmanifest  sw.js
public/live2d-widget/: autoload.js  live2d.min.js  model_list.json  waifu-config.js  waifu-texts.json  waifu-tips.js
public/live2d-widget/model/potion-Maker-Pio/: index.json  index_1.json  index_10.json  index_11.json  index_12.json  index_13.json  index_14.json  index_15.json  index_16.json  index_17.json  index_18.json  index_19.json  index_2.json  index_20.json  index_21.json  index_22.json  index_23.json  index_24.json  index_25.json  index_26.json  index_27.json  index_28.json  index_29.json  index_3.json  index_30.json  index_31.json  index_32.json  index_33.json  index_34.json  index_35.json  index_36.json  index_37.json  index_38.json  index_39.json  index_4.json  index_40.json  index_41.json  index_42.json  index_43.json  index_44.json  (+49 more)
public/live2d-widget/model/potion-Maker-Tia/: index.json  index_1.json  index_2.json  index_3.json  index_4.json  index_5.json
src/: App.vue  api.js  db.js  main.js  roleApi.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs
src/components/: ChatArea.vue  HistoryOverlay.vue  Live2DWidget.vue
src/components/remote/: RemoteChatView.vue  RemoteStrongholdView.vue
src/components/role/: PromptEditor.vue  RoleCard.vue  RoleEditor.vue  RoleList.vue
src/composables/: useRoleManager.js
src/constants/: interaction.js
src/pages/: MobileGameBlackjack.vue  MobileGroupChat.vue  MobileHome.vue  MobileSettings.vue  RemoteHubView.vue  RoleManager.vue
src/router/: index.js
(+2 files in other folders)
